Fix cluster-api/overview unconverted segments

--- a/versions/v2.8/modules/en/pages/integrations/cluster-api/overview.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/cluster-api/overview.adoc
@@ -47,20 +47,22 @@ kubectl delete validatingwebhookconfigurations.admissionregistration.k8s.io vali
 Use the following example to disable the `embedded-cluster-api` feature from the console:
 
 . Create a `feature.yaml` file, with `embedded-cluster-api` set to false:
-
-```yaml title="feature.yaml"
++
+.feature.yaml
+[,yaml]
+----
 apiVersion: management.cattle.io/v3
 kind: Feature
 metadata:
   name: embedded-cluster-api
 spec:
   value: false
-
 ----
 
-2. Use `kubectl` to apply the `feature.yaml` file to the cluster:
-
-```bash
+. Use `kubectl` to apply the `feature.yaml` file to the cluster:
++
+[,bash]
+----
 kubectl apply -f feature.yaml
 ----
 
@@ -117,7 +119,7 @@ The CAPI Operator allows for handling the lifecycle of https://turtles.docs.ranc
 ==== Installing Rancher Turtles with `Cluster API (CAPI) Operator` as a Helm dependency
 
 . Add the Helm repository containing the `rancher-turtles` chart as the first step in installation:
-
++
 [,bash]
 ----
 helm repo add turtles https://rancher.github.io/turtles
@@ -125,7 +127,7 @@ helm repo update
 ----
 
 . As mentioned before, installing Rancher Turtles requires the https://github.com/kubernetes-sigs/cluster-api-operator[CAPI Operator]. The Helm chart can automatically install it with a minimal set of flags:
-
++
 [,bash]
 ----
 helm install rancher-turtles turtles/rancher-turtles --version <version> \
@@ -136,13 +138,12 @@ helm install rancher-turtles turtles/rancher-turtles --version <version> \
 ----
 
 . This operation could take a few minutes and after completing you can review the installed controllers listed below:
-
++
 * `rancher-turtles-controller`
 * `capi-operator`
-
++
 [NOTE]
 ====
-
 * If `cert-manager` is already available in the cluster, disable its installation as a Rancher Turtles dependency. This prevents dependency conflicts:
 `--set cluster-api-operator.cert-manager.enabled=false`
 * For a list of Rancher Turtles versions, refer to the https://github.com/rancher/turtles/releases[Turtles release page].
@@ -162,7 +163,9 @@ helm install ...
 
 The following is an example of a user-managed secret `cluster-api-operator.cluster-api.configSecret.name=variables` with `CLUSTER_TOPOLOGY`, `EXP_CLUSTER_RESOURCE_SET` and `EXP_MACHINE_POOL` feature flags set and an extra custom variable:
 
-```yaml title="secret.yaml"
+.secret.yaml
+[,yaml]
+----
 apiVersion: v1
 kind: Secret
 metadata:
@@ -180,28 +183,29 @@ stringData:
 [IMPORTANT]
 ====
 
-For detailed information on the values supported by the chart and their usage, refer to [Helm chart options](https://turtles.docs.rancher.com/reference-guides/rancher-turtles-chart/values)
+For detailed information on the values supported by the chart and their usage, refer to link:https://turtles.docs.rancher.com/reference-guides/rancher-turtles-chart/values[Helm chart options]
 ====
 
 
-#### Installing Rancher Turtles without `Cluster API (CAPI) Operator` as a Helm dependency
+==== Installing Rancher Turtles without `Cluster API (CAPI) Operator` as a Helm dependency
 
 [NOTE]
 ====
 
-Remember that if you opt for this installation option, you must manage the CAPI Operator installation yourself. You can follow the [CAPI Operator guide](https://turtles.docs.rancher.com/contributing/install_capi_operator) in the Rancher Turtles documentation for assistance.
+Remember that if you opt for this installation option, you must manage the CAPI Operator installation yourself. You can follow the link:https://turtles.docs.rancher.com/contributing/install_capi_operator[CAPI Operator guide] in the Rancher Turtles documentation for assistance.
 ====
 
 
-1. Add the Helm repository containing the `rancher-turtles` chart as the first step in installation:
-
-```bash
+. Add the Helm repository containing the `rancher-turtles` chart as the first step in installation:
++
+[,bash]
+----
 helm repo add turtles https://rancher.github.io/turtles
 helm repo update
 ----
 
 . Install the chart into the `rancher-turtles-system` namespace:
-
++
 [,bash]
 ----
 helm install rancher-turtles turtles/rancher-turtles --version <version>
@@ -211,11 +215,11 @@ helm install rancher-turtles turtles/rancher-turtles --version <version>
     --create-namespace --wait
     --dependency-update
 ----
-
++
 The previous commands tell Helm to ignore installing `cluster-api-operator` as a dependency.
 
 . This operation could take a few minutes and after completing you can review the installed controller listed below:
-
++
 * `rancher-turtles-controller`
 
 == Uninstalling Rancher Turtles
@@ -251,8 +255,10 @@ Remember that, if you use a different name for the installation or a different n
 After Rancher Turtles is uninstalled, Rancher's `embedded-cluster-api` feature must be re-enabled:
 
 . Create a `feature.yaml` file, with `embedded-cluster-api` set to true:
-
-```yaml title="feature.yaml"
++
+.feature.yaml
+[,yaml]
+----
 apiVersion: management.cattle.io/v3
 kind: Feature
 metadata:
@@ -262,8 +268,9 @@ spec:
 
 ----
 
-2. Use `kubectl` to apply the `feature.yaml` file to the cluster:
-
-```bash
+. Use `kubectl` to apply the `feature.yaml` file to the cluster:
++
+[,bash]
+----
 kubectl apply -f feature.yaml
 ----
