--- a/versions/v2.8/modules/zh/pages/integrations/cluster-api/overview.adoc
+++ b/versions/v2.8/modules/zh/pages/integrations/cluster-api/overview.adoc
@@ -47,8 +47,10 @@ kubectl delete validatingwebhookconfigurations.admissionregistration.k8s.io vali
 使用以下示例从控制台禁用 `embedded-cluster-api` 功能：
 
 . 创建一个 `feature.yaml` 文件，将 `embedded-cluster-api` 设置为 false：
-
-```yaml title="feature.yaml"
++
+.feature.yaml
+[,yaml]
+----
 apiVersion: management.cattle.io/v3
 kind: Feature
 metadata:
@@ -58,9 +60,10 @@ spec:
 
 ----
 
-2. 使用 `kubectl` 将 `feature.yaml` 文件应用到集群：
-
-```bash
+. 使用 `kubectl` 将 `feature.yaml` 文件应用到集群：
++
+[,bash]
+----
 kubectl apply -f feature.yaml
 ----
 
@@ -117,7 +120,7 @@ CAPI Operator 允许使用声明式方法处理 CAPI provider 的生命周期，
 ==== 使用 `Cluster API (CAPI) Operator` 作为 Helm 依赖项安装 Rancher Turtles
 
 . 添加包含 `rancher-turtles` chart 的 Helm 仓库作为安装的第一步：
-
++
 [,bash]
 ----
 helm repo add turtles https://rancher.github.io/turtles
@@ -125,7 +128,7 @@ helm repo update
 ----
 
 . 如前面所述，安装 Rancher Turtles 需要 https://github.com/kubernetes-sigs/cluster-api-operator[CAPI Operator]。Helm chart 可以使用一组最少的参数自动安装：
-
++
 [,bash]
 ----
 helm install rancher-turtles turtles/rancher-turtles --version <version> \
@@ -136,13 +139,12 @@ helm install rancher-turtles turtles/rancher-turtles --version <version> \
 ----
 
 . 此操作可能需要几分钟时间，完成后，你可以查看下面列出的已安装的控制器：
-
++
 * `rancher-turtles-controller`
 * `capi-operator`
-
++
 [NOTE]
 ====
-
 * 如果集群中已经有可用的 `cert-manager`，请在安装时通过以下参数将 Rancher Turtles 的此项依赖禁用掉，来阻止冲突：
 `--set cluster-api-operator.cert-manager.enabled=false`
 * 有关 Rancher Turtles 的版本列表，请参阅 https://github.com/rancher/turtles/releases[Turtles 发布页面]。
@@ -162,7 +164,9 @@ helm install ...
 
 以下是一个用户管理 secret `cluster-api-operator.cluster-api.configSecret.name=variables` 的示例，其中设置了 `CLUSTER_TOPOLOGY`, `EXP_CLUSTER_RESOURCE_SET` 和 `EXP_MACHINE_POOL` 功能以及一个额外的自定义变量：
 
-```yaml title="secret.yaml"
+.secret.yaml
+[,yaml]
+----
 apiVersion: v1
 kind: Secret
 metadata:
@@ -180,28 +184,29 @@ stringData:
 [IMPORTANT]
 ====
 
-有关 chart 支持的 values 及其用法的详细信息，请参阅 [Helm chart 选项](https://turtles.docs.rancher.com/reference-guides/rancher-turtles-chart/values)
+有关 chart 支持的 values 及其用法的详细信息，请参阅 link:https://turtles.docs.rancher.com/reference-guides/rancher-turtles-chart/values[Helm chart 选项]
 ====
 
 
-#### 不使用 `Cluster API (CAPI) Operator` 作为 Helm 依赖安装 Rancher Turtles
+==== 不使用 `Cluster API (CAPI) Operator` 作为 Helm 依赖安装 Rancher Turtles
 
 [NOTE]
 ====
 
-请记住，如果使用此安装选项，你必须自行管理 CAPI Operator 的安装。你可以参照 Rancher Turtles 文档中的 [CAPI Operator 指南](https://turtles.docs.rancher.com/contributing/install_capi_operator)
+请记住，如果使用此安装选项，你必须自行管理 CAPI Operator 的安装。你可以参照 Rancher Turtles 文档中的 link:https://turtles.docs.rancher.com/contributing/install_capi_operator[CAPI Operator 指南]
 ====
 
 
-1. 添加包含 `rancher-turtles` chart 的 Helm 仓库作为安装的第一步：
-
-```bash
+. 添加包含 `rancher-turtles` chart 的 Helm 仓库作为安装的第一步：
++
+[,bash]
+----
 helm repo add turtles https://rancher.github.io/turtles
 helm repo update
 ----
 
 . 将 chart 安装到 `rancher-turtles-system` 命名空间：
-
++
 [,bash]
 ----
 helm install rancher-turtles turtles/rancher-turtles --version <version>
@@ -211,11 +216,11 @@ helm install rancher-turtles turtles/rancher-turtles --version <version>
     --create-namespace --wait
     --dependency-update
 ----
-
++
 前面的命令告诉 Helm 忽略将 `cluster-api-operator` 作为依赖项安装。
 
 . 此操作可能需要几分钟，完成后你可以查看下面列出的已安装的控制器：
-
++
 * `rancher-turtles-controller`
 
 == 卸载 Rancher Turtles
@@ -251,8 +256,10 @@ helm uninstall -n rancher-turtles-system rancher-turtles --cascade foreground --
 卸载 Rancher Turtles 后， Rancher 的 `embedded-cluster-api` 功能必须重新启用。
 
 . 创建一个 `feature.yaml` 文件，将 `embedded-cluster-api` 设置为 true：
-
-```yaml title="feature.yaml"
++
+.feature.yaml
+[,yaml]
+----
 apiVersion: management.cattle.io/v3
 kind: Feature
 metadata:
@@ -262,8 +269,9 @@ spec:
 
 ----
 
-2. 使用 `kubectl` 将 `feature.yaml` 文件应用到集群：
-
-```bash
+. 使用 `kubectl` 将 `feature.yaml` 文件应用到集群：
++
+[,bash]
+----
 kubectl apply -f feature.yaml
 ----
