Incorrect xref + duplicate ID

--- a/versions/v2.8/modules/zh/pages/security/psact.adoc
+++ b/versions/v2.8/modules/zh/pages/security/psact.adoc
@@ -23,9 +23,9 @@ RKE2 和 K3s::
 . 在 **PSA 配置模板**下拉菜单中，选择要分配的模板。
 . 单击**创建**。
 
-[#_将模板分配给现有集群]
+[#_rke2k3s_将模板分配给现有集群]
 [pass]
-<h3><a class="anchor" id="_将模板分配给现有集群" href="#_将模板分配给现有集群"></a>将模板分配给现有集群</h3>
+<h3><a class="anchor" id="_rke2k3s_将模板分配给现有集群" href="#_rke2k3s_将模板分配给现有集群"></a>将模板分配给现有集群</h3>
 
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**表中找到要更新的集群，点击 *⋮*。
@@ -50,9 +50,9 @@ RKE1::
 . 在 **PSA 配置模板**下拉菜单中，选择要分配的模板。
 . 单击**创建**。
 
-[#_将模板分配给现有集群]
+[#_rke1_将模板分配给现有集群]
 [pass]
-<h3><a class="anchor" id="_将模板分配给现有集群" href="#_将模板分配给现有集群"></a>将模板分配给现有集群</h3>
+<h3><a class="anchor" id="_rke1_将模板分配给现有集群" href="#_rke1_将模板分配给现有集群"></a>将模板分配给现有集群</h3>
 
 . 在左上角，单击 *☰ > 集群管理*。
 . 在**集群**表中找到要更新的集群，点击 *⋮*。
