--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
@@ -268,11 +268,9 @@ Refer to the https://cert-manager.io/docs/usage/cmctl/#migrate-api-version[API v
 . Upgrade cert-manager to v1.7.1 with a normal `helm upgrade`. You may go directly from version 1.5 to 1.7 if desired.
 . Follow the Helm tutorial to https://helm.sh/docs/topics/kubernetes_apis/#updating-api-versions-of-a-release-manifest[update the API version of a release manifest]. The chart release name is `release_name=rancher` and the release namespace is `release_namespace=cattle-system`.
 . In the decoded file, search for `cert-manager.io/v1beta1` and *replace it* with `cert-manager.io/v1`.
-. {blank}
-+
-= Upgrade Rancher normally with `helm upgrade`.
+. Upgrade Rancher normally with `helm upgrade`.
+======
 
-[discrete]
 === Verify the Deployment
 
 Once you've installed cert-manager, you can verify it is deployed correctly by checking the kube-system namespace for running pods:
