--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
@@ -268,11 +268,9 @@ cmctl upgrade migrate-api-version
 . 正常使用 `helm upgrade` 将 cert-manager 升级到 1.7.1。如果需要，你可以直接从版本 1.5 转到 1.7。
 . 按照 Helm 教程link:https://helm.sh/docs/topics/kubernetes_apis/#updating-api-versions-of-a-release-manifest[更新发布清单的 API 版本]。Chart 发布名称为 `release_name=rancher`，发布命名空​​间为 `release_namespace=cattle-system`。
 . 在解码后的文件中，搜索 `cert-manager.io/v1beta1` 并将其**替换**为 `cert-manager.io/v1`。
-. {blank}
-+
-= 使用 `helm upgrade` 正常升级 Rancher。
+. 使用 `helm upgrade` 正常升级 Rancher。
+======
 
-[discrete]
 === 验证部署
 
 安装完 cert-manager 后，你可以通过检查 kube-system 命名空间中正在运行的 Pod 来验证它是否已正确部署：
